# halo2-lib

./: .gitignore  Cargo.toml  README.md  rust-toolchain
halo2-base/: Cargo.toml
halo2-base/src/: lib.rs  utils.rs
halo2-base/src/gates/: flex_gate.rs  mod.rs  range.rs
halo2-base/src/gates/circuit/: builder.rs  mod.rs
halo2-base/src/poseidon/hasher/: spec.rs
halo2-base/src/utils/: halo2.rs
halo2-base/src/virtual_region/: copy_constraints.rs
halo2-ecc/: Cargo.toml
halo2-ecc/src/: lib.rs
halo2-ecc/src/bigint/: add_no_carry.rs  big_is_equal.rs  big_is_zero.rs  big_less_than.rs  carry_mod.rs  check_carry_mod_to_zero.rs  check_carry_to_zero.rs  mod.rs  mul_no_carry.rs  negative.rs  scalar_mul_and_add_no_carry.rs  scalar_mul_no_carry.rs  select.rs  select_by_indicator.rs  sub.rs  sub_no_carry.rs
halo2-ecc/src/bn254/: final_exp.rs  mod.rs  pairing.rs
halo2-ecc/src/bn254/configs/: pairing_circuit.tmp.config
halo2-ecc/src/bn254/data/: ec_add_circuit_proof_15_10_2_1_14_88_3_100.data  ec_add_circuit_proof_16_5_1_1_15_90_3_100.data  ec_add_circuit_proof_17_3_1_1_16_88_3_100.data  ec_add_circuit_proof_18_2_1_1_17_88_3_100.data
halo2-ecc/src/bn254/tests/: ec_add.rs  fixed_base_msm.rs  mod.rs  msm.rs
halo2-ecc/src/ecc/: ecdsa.rs  fixed_base.rs  mod.rs  pippenger.rs  tests.rs
halo2-ecc/src/fields/: fp.rs  fp12.rs  fp2.rs  mod.rs  tests.rs
halo2-ecc/src/secp256k1/tests/: ecdsa.rs
halo2_base/src/: lib.rs  utils.rs
halo2_base/src/gates/: flex_gate.rs  mod.rs  range.rs  tests.rs
halo2_ecc/: Cargo.toml
halo2_ecc/src/: lib.rs
halo2_ecc/src/bigint/: add_no_carry.rs  big_is_equal.rs  big_is_zero.rs  big_less_than.rs  carry_mod.rs  check_carry_mod_to_zero.rs  check_carry_to_zero.rs  inner_product.rs  mod.rs  mul_no_carry.rs  negative.rs  scalar_mul_and_add_no_carry.rs  scalar_mul_no_carry.rs  select.rs  sub.rs  sub_no_carry.rs
halo2_ecc/src/bn254/: final_exp.rs  mod.rs  pairing.rs  tests.rs
halo2_ecc/src/bn254/configs/: bench_msm.config  bench_pairing.config  bench_pairing_simple.config  bench_pairing_simple_plus.config  msm_circuit.config
halo2_ecc/src/bn254/results/: msm_bench.csv
halo2_ecc/src/ecc/: fixed.rs  mod.rs  pippenger.rs  tests.rs
halo2_ecc/src/fields/: fp.rs  fp12.rs  fp2.rs  fp_overflow.rs  mod.rs
halo2_ecc/src/secp256k1/: ecdsa.rs  mod.rs
halo2_ecc/src/secp256k1/configs/: bench_ecdsa_simple.config  ecdsa_circuit.config
hashes/zkevm-keccak/: Cargo.toml  recursive_diff.sh
hashes/zkevm-keccak/diffs/: keccak_circuit.rs.diff
hashes/zkevm-keccak/diffs/keccak_circuit/: cell_manager.rs.diff  keccak_packed_multi.rs.diff  keccak_table.rs.diff  param.rs.diff  table.rs.diff  test.rs.diff  util.rs.diff
hashes/zkevm-keccak/src/: keccak_circuit.rs  keccak_packed_multi.rs
src/: bigint.rs  bigintmult1.rs  ecc.rs  ecc_crt.rs  ecc_crt_vec.rs  example1.rs  example2.rs  fields.rs  fp.rs  gates.rs  lib.rs  main.rs  utils.rs
src/bigint/: add_no_carry.rs  big_is_equal.rs  big_is_zero.rs  big_less_than.rs  carry_mod.rs  check_carry_mod_to_zero.rs  check_carry_to_zero.rs  chip.rs  decompose.rs  dot_product.rs  inner_product.rs  mod.rs  mod_reduce.rs  mul_no_carry.rs  mul_no_carry_trunc.rs  negative.rs  scalar_mul_and_add_no_carry.rs  scalar_mul_no_carry.rs  select.rs  sub.rs  sub_no_carry.rs
src/bigint/chip/: mul_no_carry.rs
src/bn254/: bench_pairing.config  final_exp.rs  mod.rs  pairing.rs  pairing_bench.csv  pairing_bench_results.txt  pairing_circuit.config  tests.rs
src/bn254/configs/: bench_msm.config  bench_msm_simple.config  bench_msm_simple_plus.config  bench_pairing.config  bench_pairing_custom_short.config  msm_circuit.config  pairing_circuit.config
src/bn254/results/: msm_bench.csv  pairing_bench.csv  pairing_bench_m1.csv
src/ecc/: add_unequal.rs  fixed.rs  mod.rs  pippenger.rs  sub_unequal.rs  tests.rs
src/examples/: example1.rs  example2.rs
src/fields/: Fp.rs  fp.rs  fp12.rs  fp2.rs  fp_crt.rs  fp_crt_vec.rs  fp_many_gates.rs  fp_overflow.rs  mod.rs
src/gates/: flex_gate.rs  mod.rs  qap_gate.rs  range.rs  tests.rs
src/pairing/: mod.rs  tests.rs
src/secp256k1/: ecdsa.rs  ecdsa_bench.csv  ecdsa_bench_results.txt  ecdsa_circuit.config  mod.rs  tests.rs
src/secp256k1/configs/: bench_ecdsa_simple.config  ecdsa_circuit.config
src/secp256k1/results/: ecdsa_bench.csv
(+10 files in other folders)
