[package]
name = "halo2_ecc"
version = "0.0.1"
edition = "2021"

[features]
default = ["display"]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
display = []

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
halo2_proofs = { git = "https://github.com/junyu0312/halo2", rev = "4112958c7fa980b331897fd030a329095f418ff9", default-features = true }
ff = "0.11.0"
group = "0.11"
pairing_bn256 = { git = "https://github.com/appliedzkp/pairing", tag = "v0.1.1" }
# halo2curves = { git = "https://github.com/jonathanpwang/halo2curves.git", package = "halo2curves" }
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
rand_core = { version = "0.6", default-features = false }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# mimalloc = { version = "0.1" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }

[profile.release]
debug = true