[package]
name = "halo2_ecc"
version = "0.0.1"
edition = "2021"

[features]
default = ["display"]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
display = []

[patch.crates-io]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_08_19" }
#halo2_proofs = { git = "ssh://git@github.com/scroll-tech/halo2-gpu.git" }
#halo2_proofs = { path = "../halo2-gpu/halo2_proofs" }

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
halo2_proofs = { version = "0.2.0" }
ff = "0.12.0"
group = "0.12.0"
# halo2curves = { git = "https://github.com/jonathanpwang/pse-pairing-bn254.git", package = "pairing_bn254" }
halo2curves = { git = "https://github.com/jonathanpwang/halo2curves.git", package = "halo2curves" }
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
rand_core = { version = "0.6", default-features = false }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# mimalloc = { version = "0.1" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }

[profile.release]
debug = true