[workspace]
members = [
    "halo2_base",
    "halo2_ecc"
]

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
#halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
#halo2_proofs = { git = "ssh://git@github.com/scroll-tech/halo2-gpu.git" }
#halo2_proofs = { path = "../halo2-gpu/halo2_proofs" }
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "parallel_syn" }
#halo2_proofs = { path = "../halo2/halo2_proofs" }

[profile.release]
debug = true