[package]
name = "halo2_ecc"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
ff = "0.12.0"
group = "0.12.0"
rand_core = { version = "0.6", default-features = false }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


ark-std = { version = "0.3.0", features = ["print-trace"] }

# halo2
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
halo2curves = { git = "https://github.com/jonathanpwang/halo2curves.git", package = "halo2curves" }
halo2_base = { path = "../halo2_base", default-features = false }

# memory allocation
jemallocator = { version = "0.3.2", optional = true }
# mimalloc = { version = "0.1" }

# plotting circuit layout
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }

[features]
default = ["display", "jemalloc"]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
display = ["halo2_base/display"]
jemalloc = ["dep:jemallocator"]
